# undergraduate-thesis

./: .gitignore  CLAUDE.md  reference.bib  sysusetup.tex
code/: README.md  pyproject.toml
code/demo_static/: app.js  index.html  styles.css
code/results/: thesis-ready-summary-20260330.json
code/results/nightly-20260330/: summary.json
code/results/nightly-20260330-v2/: summary.json
code/results/nightly-20260330-v2/artifacts/100/: description_embeddings_for_demo.npy  ranking_summary.json  skillrank_scores_for_demo.npy  terrain.json
code/results/nightly-20260330-v2/artifacts/1000/: ranking_summary.json  skillrank_scores_for_demo.npy  terrain.json
code/results/nightly-20260330-v2/logs/: autoresearch_trace.json  dataset_1000.json
code/results/nightly-20260330/artifacts/100/: ranking_summary.json  skillrank_scores_for_demo.npy  terrain.json
code/results/nightly-20260330/logs/: autoresearch_trace.json
code/results/scale-100-tuned/: summary.json
code/results/scale-100-tuned/logs/: autoresearch_trace.json
code/results/smoke-100/: summary.json
code/results/smoke-100-v2/logs/: autoresearch_trace.json  dataset_100.json
code/results/smoke-100-v3/: summary.json
code/results/smoke-100/logs/: autoresearch_trace.json
code/scripts/: build_skill_datasets.py  run_experiments.py  serve_demo.py
code/src/skill_dataset_builder/: __init__.py  dataset_builder.py  github_api.py  parser.py
code/src/taste_skill_experiments/: __init__.py  demo_server.py  pipeline.py
code/src/taste_skill_experiments.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+31 files in other folders)
